--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="CPE470 : Autonomous mobile robots" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>CPE470 by lukefrasera</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>CPE470</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/lukefrasera/CPE470">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/lukefrasera/CPE470/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/lukefrasera/CPE470/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lukefrasera/CPE470">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">CPE470</h1>
-          <h2 id="project_tagline">Autonomous mobile robots</h2>
+      <section>
+        <div id="title">
+          <h1>CPE470</h1>
+          <p>Autonomous mobile robots</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/lukefrasera">lukefrasera</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/lukefrasera/CPE470/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/lukefrasera/CPE470/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h2>
 <a name="autonomous-mobile-robots" class="anchor" href="#autonomous-mobile-robots"><span class="octicon octicon-link"></span></a>Autonomous Mobile Robots</h2>
 
@@ -44,17 +51,9 @@
 
 <p><a href="https://github.com/lukefrasera/CPE470/releases">Link to lab 2</a></p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">CPE470 maintained by <a href="https://github.com/lukefrasera">lukefrasera</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
