Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
 <a name="lab02" class="anchor" href="#lab02"><span class="octicon octicon-link"></span></a>Lab02</h3>
 
 <p><a href="https://github.com/lukefrasera/CPE470/releases">Link to lab 2</a></p>
+
+<h3>
+<a name="lab03" class="anchor" href="#lab03"><span class="octicon octicon-link"></span></a>Lab03</h3>
+
+<p><a href="https://github.com/lukefrasera/CPE470/Lab03">Link to lab 3</a></p>
       </section>
 
     </div>
