Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,17 +44,12 @@
 <h3>
 <a name="team-o6" class="anchor" href="#team-o6"><span class="octicon octicon-link"></span></a>Team O6</h3>
 
-<p>Hello! Welcome to our robotics webpage</p>
+<p>Hello! Welcome to our robotics webpage. You can download the zip file or you can follow the link below to get to the repository. </p>
 
 <h3>
-<a name="lab02" class="anchor" href="#lab02"><span class="octicon octicon-link"></span></a>Lab02</h3>
+<a name="repository" class="anchor" href="#repository"><span class="octicon octicon-link"></span></a>Repository:</h3>
 
-<p><a href="https://github.com/lukefrasera/CPE470/releases">Link to lab 2</a></p>
-
-<h3>
-<a name="lab03" class="anchor" href="#lab03"><span class="octicon octicon-link"></span></a>Lab03</h3>
-
-<p><a href="https://github.com/lukefrasera/CPE470/Lab03">Link to lab 3</a></p>
+<p><a href="https://github.com/lukefrasera/CPE470/releases">Link to Repository</a></p>
       </section>
 
     </div>
