Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
 <a name="lab-04" class="anchor" href="#lab-04"><span class="octicon octicon-link"></span></a>Lab 04:</h3>
 
 <p>This lab had to find food out on the field in the form of colored cards and RFID cards, both small and large. It then had to return to a home base, marked with a black square. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab04">Link to Repository for Lab 04</a></p>
+
+<h3>
+<a name="lab-05" class="anchor" href="#lab-05"><span class="octicon octicon-link"></span></a>Lab 05:</h3>
+
+<p>This lab had to follow a line. Then once it hit the end of the line, marked with a yellow square, it had to find home. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab05">Link to Repository for Lab 05</a></p>
       </section>
 
     </div>
