--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
 <a name="lab-05" class="anchor" href="#lab-05"><span class="octicon octicon-link"></span></a>Lab 05:</h3>
 
 <p>This lab had to follow a line. Then once it hit the end of the line, marked with a yellow square, it had to find home. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab05">Link to Repository for Lab 05</a></p>
+
+<h3>
+<a name="lab-06" class="anchor" href="#lab-06"><span class="octicon octicon-link"></span></a>Lab 06:</h3>
+
+<p>This lab had to sort between red and blue balls. The blue balls had to be relocated and the red balls ejected from the side of the course. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab06">Link to Repository for Lab 06</a></p>
       </section>
 
     </div>
