Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
 <a name="lab-06" class="anchor" href="#lab-06"><span class="octicon octicon-link"></span></a>Lab 06:</h3>
 
 <p>This lab had to sort between red and blue balls. The blue balls had to be relocated and the red balls ejected from the side of the course. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab06">Link to Repository for Lab 06</a></p>
+
+<h3>
+<a name="lab-07-final-competition" class="anchor" href="#lab-07-final-competition"><span class="octicon octicon-link"></span></a>Lab 07: Final Competition</h3>
+
+<p>This lab was a soccer game between two robots. An infrared ball was the soccer ball and the goals were on either side of the course. In the case of a tie, there was a penalty kick tie breaker. <br><a href="https://github.com/lukefrasera/CPE470/tree/master/Lab07">Link to Repository for Lab 07</a></p>
       </section>
 
     </div>
